# schemas/api/openapi.json
@@ -3069,6 +3069,22 @@
           },
           {
             "in": "header",
+            "name": "X-Tenant-Id",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "X-Tenant-Id"
+            }
+          },
+          {
+            "in": "header",
             "name": "X-API-Key",
             "required": false,
             "schema": {
